--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./myjpj" alt="Your Profile Picture" class="profile-picture">
+            <img src="./jayasri.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>JAYASRI S</h1>
             <p>Mastertrainer Edunet Foundation</p>
         </div>
